[Thread profiler] Avoid posting delayed tasks with negative TimeDelta

Avoids DCHECK failures in cases where the computer is put to sleep for
an extended period.

Bug: 859738
Change-Id: Ibab67689586eb9dbedb42c2393ed24d3b2bbb531
Reviewed-on: https://chromium-review.googlesource.com/1125337
Commit-Queue: Mike Wittman <wittman@chromium.org>
Reviewed-by: Lei Zhang <thestig@chromium.org>
Reviewed-by: Ilya Sherman <isherman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573067}
Former-commit-id: 64ab9843e3587eb6ca8a87d0d2bdef28db412060